@@ -78,10 +78,16 @@ class SelectQueryMetadata extends BaseQueryMetadata {
                     }
                 }
 
-                if (query.getFetchLimit() > 0) {
-                    key.append('/').append(query.getFetchLimit());
+                if (query.getFetchOffset() > 0 || query.getFetchLimit() > 0) {
+                    key.append('/');
+                    if (query.getFetchOffset() > 0) {
+                        key.append('o').append(query.getFetchOffset());
+                    }
+                    if (query.getFetchLimit() > 0) {
+                        key.append('l').append(query.getFetchLimit());
+                    }
                 }
-
+                
                 this.cacheKey = key.toString();
             }
 
