@@ -23,6 +23,7 @@ CAY-1514 ClassCastException when EJQLQuery parameters is null.
 CAY-1577 SQL queries for LIKE expressions with escape character generated with syntax errors
 CAY-1581 Not-Escaping <> during serialization to *.map.xml
 CAY-1583 context.getObjectStore() returning null causing NullpointerException in DataMergeHandler
+CAY-1585 SelectQuery automatic cache key needs FetchOffset
 
 ----------------------------------
 Release: 3.0.2
